Fixed Horizontal Scroll issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,9 +7,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+/** {*/
+/*    outline: solid 1px red;*/
+/*}*/
+
 
 body{
     background-image: linear-gradient(rgba(225, 209, 119, 0.63), rgba(95, 45, 182, 0.82));
+    display: flex;
+    overflow-x: hidden;
 }
 
 body{
@@ -21,6 +27,7 @@ body{
 .blob{
   width:700px;
   height: 700px;
+    max-width: 100%;
   border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% ;
   border-radius: 69% 31% 44% 56% / 43% 27% 73% 57% ;
   background-image: linear-gradient(rgba(158, 31, 222, 0.63), rgba(0, 243, 255, 0.64));
@@ -28,11 +35,12 @@ body{
   top:-95px;
   right: -55px;
   z-index: -1;
-    overflow: auto;
 
 }
 
 #blob2 {
+    width:700px;
+    height: 700px;
     border-radius: 61% 67% 84% 37% / 66% 83% 32% 56%;
     position: absolute;
     background-image: linear-gradient(rgba(158, 31, 222, 0.63), rgba(0, 243, 255, 0.64));
